@@ -331,7 +331,7 @@ static void get_line_and_column_from_filename(gchar *filename, gint *line, gint 
 
 	g_assert(*line == -1 && *column == -1);
 
-	if (! NZV(filename))
+	if (G_UNLIKELY(! NZV(filename)))
 		return;
 
 	/* allow to open files like "test:0" */
@@ -834,7 +834,7 @@ static void load_session_project_file(void)
 
 	locale_filename = utils_get_locale_from_utf8(project_prefs.session_file);
 
-	if (NZV(locale_filename))
+	if (G_LIKELY(NZV(locale_filename)))
 		project_load_file(locale_filename);
 
 	g_free(locale_filename);
